# avif-practice

./: Cargo.toml
assets/: alpha.avif  frog.avif
src/: main.rs
